<resources>
    <string name="app_name">Movies</string>
    <string name="no_data_text">Something went wrong!</string>
    <string name="no_favs_text">You have no favourites!</string>
    <string name="menu_popularity">Popular Movies</string>
    <string name="menu_votes">Most Voted Movies</string>
    <string name="menu_favs">Favourite Movies</string>
    <string name="popularity_key" translatable="false">popularity</string>
    <string name="votes_key" translatable="false">votes</string>
    <string name="favs_key" translatable="false">favs</string>
    <string name="rating_heading">Rating: </string>
    <string name="rating_text_string">%1$s/10</string>
    <string name="release_date_heading">Release Date: </string>
    <string name="synopsis_heading">Synopsis</string>
    <string name="trailer_heading">Trailers</string>
    <string name="review_heading">Reviews</string>
    <string name="cache_set_key">favs_set</string>
    <string name="share">Share</string>
</resources>
